# been

./: .env.sample  Dockerfile  LICENSE  README.md  been.sh  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
images/: example.md  summary.md
resources/templates/: footer.md  header.md  image.md  trip.md
src/: constants.py  data_models.py  file_utils.py  gpt_client.py  locations.py  logging_filter.py  main.py  markdown.py  metadata.py  open_ai.py  phi_client.py  summaries.py  summary.py  trip_image.py  trips.py  utils.py
trips/: context.txt  summary-55.md  summary.md
