[tool.poetry]
name = "been"
version = "0.1.0"
description = "Been"
authors = ["Ira Rainey"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
geopy = "^2.4.1"
python-dotenv = "^1.0.1"
openai = "^1.57.4"
markitdown = { path = "packages/markitdown-0.0.1a1-py3-none-any.whl" }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
